added color coding

--- a/index.html
+++ b/index.html
@@ -24,95 +24,97 @@
 
     <div class="row d-flex justify-content-center">
       <div class="col-1 hour d-flex justify-content-end"> 7 AM </div>
-      <textarea class="col-9 border time-block" id="7am">test  </textarea>
+      <textarea class="col-9 border time-block" id="7" placeholder="Enter Task Here"></textarea>
       <div class="saveBtn col-1 border justify-content-center d-flex align-items-center">
         <i type="submit" class="fas fa-save" id="7am-btn"> </i>
       </div>
     </div>
     <div class="row d-flex justify-content-center">
       <div class="col-1 hour d-flex justify-content-end"> 8 AM </div>
-      <textarea class="col-9 border time-block" id="8am">  </textarea>
+      <textarea class="col-9 border time-block" id="8"placeholder="Enter Task Here"></textarea>
       <div class="saveBtn col-1 border justify-content-center d-flex align-items-center">
-        <i type="submit" class="fas fa-save" id="8am-btn"> </i>
+        <i type="submit" class="fas fa-save" id="7am-btn"> </i>
       </div>
     </div>
     <div class="row d-flex justify-content-center">
       <div class="col-1 hour d-flex justify-content-end"> 9 AM </div>
-      <textarea class="col-9 border time-block" id="9am">  </textarea>
+      <textarea class="col-9 border time-block" id="9" placeholder="Enter Task Here"></textarea>
       <div class="saveBtn col-1 border justify-content-center d-flex align-items-center">
-        <i type="submit" class="fas fa-save" id="9am-btn"> </i>
+        <i type="submit" class="fas fa-save" id="7am-btn"> </i>
       </div>
     </div>
     <div class="row d-flex justify-content-center">
       <div class="col-1 hour d-flex justify-content-end"> 10 AM </div>
-      <textarea class="col-9 border time-block" id="10am">  </textarea>
+      <textarea class="col-9 border time-block" id="10" placeholder="Enter Task Here"></textarea>
       <div class="saveBtn col-1 border justify-content-center d-flex align-items-center">
-        <i type="submit" class="fas fa-save" id="10am-btn"> </i>
+        <i type="submit" class="fas fa-save" id="7am-btn"> </i>
       </div>
     </div>
     <div class="row d-flex justify-content-center">
       <div class="col-1 hour d-flex justify-content-end"> 11 AM </div>
-      <textarea class="col-9 border time-block" id="11am">  </textarea>
+      <textarea class="col-9 border time-block" id="11" placeholder="Enter Task Here"></textarea>
       <div class="saveBtn col-1 border justify-content-center d-flex align-items-center">
-        <i type="submit" class="fas fa-save" id="11am-btn"> </i>
+        <i type="submit" class="fas fa-save" id="7am-btn"> </i>
       </div>
     </div>
     <div class="row d-flex justify-content-center">
       <div class="col-1 hour d-flex justify-content-end"> 12 PM </div>
-      <textarea class="col-9 border time-block" id="12pm">  </textarea>
+      <textarea class="col-9 border time-block" id="12" placeholder="Enter Task Here"></textarea>
       <div class="saveBtn col-1 border justify-content-center d-flex align-items-center">
-        <i type="submit" class="fas fa-save" id="12pm-btn"> </i>
+        <i type="submit" class="fas fa-save" id="7am-btn"> </i>
       </div>
     </div>
     <div class="row d-flex justify-content-center">
       <div class="col-1 hour d-flex justify-content-end"> 1 PM </div>
-      <textarea class="col-9 border time-block" id="1pm">  </textarea>
+      <textarea class="col-9 border time-block" id="13" placeholder="Enter Task Here"></textarea>
       <div class="saveBtn col-1 border justify-content-center d-flex align-items-center">
-        <i type="submit" class="fas fa-save" id="1pm-btn"> </i>
+        <i type="submit" class="fas fa-save" id="7am-btn"> </i>
       </div>
     </div>
     <div class="row d-flex justify-content-center">
       <div class="col-1 hour d-flex justify-content-end"> 2 PM </div>
-      <textarea class="col-9 border time-block" id="2pm">  </textarea>
+      <textarea class="col-9 border time-block" id="14" placeholder="Enter Task Here"></textarea>
       <div class="saveBtn col-1 border justify-content-center d-flex align-items-center">
-        <i type="submit" class="fas fa-save" id="2pm-btn"> </i>
+        <i type="submit" class="fas fa-save" id="7am-btn"> </i>
       </div>
     </div>
     <div class="row d-flex justify-content-center">
       <div class="col-1 hour d-flex justify-content-end"> 3 PM </div>
-      <textarea class="col-9 border time-block" id="3pm">  </textarea>
+      <textarea class="col-9 border time-block" id="15" placeholder="Enter Task Here"></textarea>
       <div class="saveBtn col-1 border justify-content-center d-flex align-items-center">
-        <i type="submit" class="fas fa-save" id="3pm-btn"> </i>
+        <i type="submit" class="fas fa-save" id="7am-btn"> </i>
       </div>
     </div>
     <div class="row d-flex justify-content-center">
       <div class="col-1 hour d-flex justify-content-end"> 4 PM </div>
-      <textarea class="col-9 border time-block" id="4pm">  </textarea>
+      <textarea class="col-9 border time-block" id="16" placeholder="Enter Task Here"></textarea>
       <div class="saveBtn col-1 border justify-content-center d-flex align-items-center">
-        <i type="submit" class="fas fa-save" id="4pm-btn"> </i>
+        <i type="submit" class="fas fa-save" id="7am-btn"> </i>
       </div>
     </div>
     <div class="row d-flex justify-content-center">
       <div class="col-1 hour d-flex justify-content-end"> 5 PM </div>
-      <textarea class="col-9 border time-block" id="5pm">  </textarea>
+      <textarea class="col-9 border time-block" id="17" placeholder="Enter Task Here"></textarea>
       <div class="saveBtn col-1 border justify-content-center d-flex align-items-center">
-        <i type="submit" class="fas fa-save" id="5pm-btn"> </i>
+        <i type="submit" class="fas fa-save" id="7am-btn"> </i>
       </div>
     </div>
     <div class="row d-flex justify-content-center">
       <div class="col-1 hour d-flex justify-content-end"> 6 PM </div>
-      <textarea class="col-9 border time-block" id="6pm">  </textarea>
+      <textarea class="col-9 border time-block" id="18" placeholder="Enter Task Here"></textarea>
       <div class="saveBtn col-1 border justify-content-center d-flex align-items-center">
-        <i type="submit" class="fas fa-save" id="6pm-btn"> </i>
+        <i type="submit" class="fas fa-save" id="7am-btn"> </i>
       </div>
     </div>
     <div class="row d-flex justify-content-center">
       <div class="col-1 hour d-flex justify-content-end"> 7 PM </div>
-      <textarea class="col-9 border time-block" id="7pm">  </textarea>
+      <textarea class="col-9 border time-block" id="19" placeholder="Enter Task Here"></textarea>
       <div class="saveBtn col-1 border justify-content-center d-flex align-items-center">
-        <i type="submit" class="fas fa-save" id="7pm-btn"> </i>
+        <i type="submit" class="fas fa-save" id="7am-btn"> </i>
       </div>
     </div>
+
+
 
 
   </div>
