fixed colour coding

--- a/index.html
+++ b/index.html
@@ -19,23 +19,10 @@
     <p class="lead">A simple calendar app for scheduling your work day</p>
     <p id="currentDay" class="lead"></p>
   </header>
-  <div class="container">
+  <div class="container pb-5">
     <!-- Timeblocks go here -->
 
-    <div class="row d-flex justify-content-center">
-      <div class="col-1 hour d-flex justify-content-end"> 7 AM </div>
-      <textarea class="col-9 border time-block" id="7" placeholder="Enter Task Here"></textarea>
-      <div class="saveBtn col-1 border justify-content-center d-flex align-items-center">
-        <i type="submit" class="fas fa-save" id="7am-btn"> </i>
-      </div>
-    </div>
-    <div class="row d-flex justify-content-center">
-      <div class="col-1 hour d-flex justify-content-end"> 8 AM </div>
-      <textarea class="col-9 border time-block" id="8"placeholder="Enter Task Here"></textarea>
-      <div class="saveBtn col-1 border justify-content-center d-flex align-items-center">
-        <i type="submit" class="fas fa-save" id="7am-btn"> </i>
-      </div>
-    </div>
+   
     <div class="row d-flex justify-content-center">
       <div class="col-1 hour d-flex justify-content-end"> 9 AM </div>
       <textarea class="col-9 border time-block" id="9" placeholder="Enter Task Here"></textarea>
@@ -99,23 +86,6 @@
         <i type="submit" class="fas fa-save" id="7am-btn"> </i>
       </div>
     </div>
-    <div class="row d-flex justify-content-center">
-      <div class="col-1 hour d-flex justify-content-end"> 6 PM </div>
-      <textarea class="col-9 border time-block" id="18" placeholder="Enter Task Here"></textarea>
-      <div class="saveBtn col-1 border justify-content-center d-flex align-items-center">
-        <i type="submit" class="fas fa-save" id="7am-btn"> </i>
-      </div>
-    </div>
-    <div class="row d-flex justify-content-center">
-      <div class="col-1 hour d-flex justify-content-end"> 7 PM </div>
-      <textarea class="col-9 border time-block" id="19" placeholder="Enter Task Here"></textarea>
-      <div class="saveBtn col-1 border justify-content-center d-flex align-items-center">
-        <i type="submit" class="fas fa-save" id="7am-btn"> </i>
-      </div>
-    </div>
-
-
-
 
   </div>
 
