--- a/index.html
+++ b/index.html
@@ -25,65 +25,65 @@
    
     <div class="row d-flex justify-content-center">
       <div class="col-1 hour d-flex justify-content-end"> 9 AM </div>
-      <textarea class="col-9 border time-block" id="9" placeholder="Enter Task Here"></textarea>
+      <textarea class="col-9 border time-block text-left" id="9" placeholder="Enter Task Here"></textarea>
       <div class="saveBtn col-1 border justify-content-center d-flex align-items-center">
-        <i type="submit" class="fas fa-save" id="7am-btn"> </i>
+        <i type="submit" class="fas fa-save" id="9btn"> </i>
       </div>
     </div>
     <div class="row d-flex justify-content-center">
-      <div class="col-1 hour d-flex justify-content-end"> 10 AM </div>
-      <textarea class="col-9 border time-block" id="10" placeholder="Enter Task Here"></textarea>
+      <div class="col-1 hour d-flex justify-content-end "> 10 AM </div>
+      <textarea class="col-9 border time-block text-left" id="10" placeholder="Enter Task Here"></textarea>
       <div class="saveBtn col-1 border justify-content-center d-flex align-items-center">
-        <i type="submit" class="fas fa-save" id="7am-btn"> </i>
+        <i type="submit" class="fas fa-save" id="10btn"> </i>
       </div>
     </div>
     <div class="row d-flex justify-content-center">
       <div class="col-1 hour d-flex justify-content-end"> 11 AM </div>
-      <textarea class="col-9 border time-block" id="11" placeholder="Enter Task Here"></textarea>
+      <textarea class="col-9 border time-block text-left" id="11" placeholder="Enter Task Here"></textarea>
       <div class="saveBtn col-1 border justify-content-center d-flex align-items-center">
-        <i type="submit" class="fas fa-save" id="7am-btn"> </i>
+        <i type="submit" class="fas fa-save" id="11btn"> </i>
       </div>
     </div>
     <div class="row d-flex justify-content-center">
       <div class="col-1 hour d-flex justify-content-end"> 12 PM </div>
-      <textarea class="col-9 border time-block" id="12" placeholder="Enter Task Here"></textarea>
+      <textarea class="col-9 border time-block text-left" id="12" placeholder="Enter Task Here"></textarea>
       <div class="saveBtn col-1 border justify-content-center d-flex align-items-center">
-        <i type="submit" class="fas fa-save" id="7am-btn"> </i>
+        <i type="submit" class="fas fa-save" id="12btn"> </i>
       </div>
     </div>
     <div class="row d-flex justify-content-center">
       <div class="col-1 hour d-flex justify-content-end"> 1 PM </div>
-      <textarea class="col-9 border time-block" id="13" placeholder="Enter Task Here"></textarea>
+      <textarea class="col-9 border time-block text-left" id="13" placeholder="Enter Task Here"></textarea>
       <div class="saveBtn col-1 border justify-content-center d-flex align-items-center">
-        <i type="submit" class="fas fa-save" id="7am-btn"> </i>
+        <i type="submit" class="fas fa-save" id="13btn"> </i>
       </div>
     </div>
     <div class="row d-flex justify-content-center">
       <div class="col-1 hour d-flex justify-content-end"> 2 PM </div>
-      <textarea class="col-9 border time-block" id="14" placeholder="Enter Task Here"></textarea>
+      <textarea class="col-9 border time-block text-left" id="14" placeholder="Enter Task Here"></textarea>
       <div class="saveBtn col-1 border justify-content-center d-flex align-items-center">
-        <i type="submit" class="fas fa-save" id="7am-btn"> </i>
+        <i type="submit" class="fas fa-save" id="14btn"> </i>
       </div>
     </div>
     <div class="row d-flex justify-content-center">
       <div class="col-1 hour d-flex justify-content-end"> 3 PM </div>
-      <textarea class="col-9 border time-block" id="15" placeholder="Enter Task Here"></textarea>
+      <textarea class="col-9 border time-block text-left" id="15" placeholder="Enter Task Here"></textarea>
       <div class="saveBtn col-1 border justify-content-center d-flex align-items-center">
-        <i type="submit" class="fas fa-save" id="7am-btn"> </i>
+        <i type="submit" class="fas fa-save" id="15btn"> </i>
       </div>
     </div>
     <div class="row d-flex justify-content-center">
-      <div class="col-1 hour d-flex justify-content-end"> 4 PM </div>
-      <textarea class="col-9 border time-block" id="16" placeholder="Enter Task Here"></textarea>
+      <div class="col-1 hour d-flex justify-content-end "> 4 PM </div>
+      <textarea class="col-9 border time-block text-left" id="16" placeholder="Enter Task Here"></textarea>
       <div class="saveBtn col-1 border justify-content-center d-flex align-items-center">
-        <i type="submit" class="fas fa-save" id="7am-btn"> </i>
+        <i type="submit" class="fas fa-save" id="16btn"> </i>
       </div>
     </div>
     <div class="row d-flex justify-content-center">
       <div class="col-1 hour d-flex justify-content-end"> 5 PM </div>
-      <textarea class="col-9 border time-block" id="17" placeholder="Enter Task Here"></textarea>
+      <textarea class="col-9 border time-block text-left" id="17" placeholder="Enter Task Here"></textarea>
       <div class="saveBtn col-1 border justify-content-center d-flex align-items-center">
-        <i type="submit" class="fas fa-save" id="7am-btn"> </i>
+        <i type="submit" class="fas fa-save" id="17btn"> </i>
       </div>
     </div>
 
