fixed local storage and added notification

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="container pb-5">
     <!-- Timeblocks go here -->
 
-   
+
     <div class="row d-flex justify-content-center">
       <div class="col-1 hour d-flex justify-content-end"> 9 AM </div>
       <textarea class="col-9 border time-block text-left" id="9" placeholder="Enter Task Here"></textarea>
@@ -89,7 +89,10 @@
 
   </div>
 
-  <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+  <script
+  src="https://code.jquery.com/jquery-3.6.1.min.js"
+  integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
+  crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   <script src="./assets/js/script.js"></script>
 </body>
